2016-02-06  Gavin Smith  <gavinsmith0123@gmail.com>

	* doc/texinfo.texi: Change "cross reference" to "cross-reference"
	throughout.

2016-02-06  Gavin Smith  <gavinsmith0123@gmail.com>

	* NEWS: Mention that behaviour is unchanged for comma or full 
	stop following closing brace of @xref command.  Text from Karl Berry.
	* NEWS: Change word 'makeinfo' to 'texi2any'.
	* doc/texinfo.texi (Cross Reference Parts): Mention how to avoid 
	an unwanted comma after the cross-reference when processing with 
	TeX.

	* NEWS, doc/texinfo.texi (Cross Reference Parts): Move example 
	of comma insertion.  Suggestion from Karl Berry.

2016-02-05  Gavin Smith  <gavinsmith0123@gmail.com>

	* doc/texinfo.tex (\xrefX): Check for some commands following 
	the closing brace of an @xref command which add space.  
	Suggestion from Karl Berry.

	* doc/texinfo-tex-test.texi (Cross-references): Add examples 
	with tab, newline, @SPACE, @TAB, @NL, @*, and @: following 
	@xref.

2016-02-05  Gavin Smith  <gavinsmith0123@gmail.com>

	* doc/texinfo.texi (@inforef): Remove statement saying that 
	@inforef must be followed by a comma or a full stop.  Reported 
	by Karl Berry.

2016-02-05  Masamichi Hosoda  <trueroad@trueroad.jp>

        * doc/texinfo.tex (\doxeteximage):
        @image support for XeTeX.
        (\image): @image support for XeTeX.

2016-02-02  Gavin Smith  <gavinsmith0123@gmail.com>

	* NEWS: Move NEWS about XS earlier and mention that pure Perl 
	modules can still be used by default.  Suggestion from Karl Berry.

2016-02-02  Gavin Smith  <gavinsmith0123@gmail.com>

	* configure.ac: Add "(XS)" after "Perl extension" in message to 
	make it easier to find in configure output.  Repeat message 
	after output from trying to build and run an extension module so 
	it's clear what 'yes' or 'no' refers to.  Possible confusion 
	reported by Karl Berry.

2016-02-02  Gavin Smith  <gavinsmith0123@gmail.com>

	* doc/texinfo.tex (\chapmacro): Allow this macro to occur inside 