@@ -19,7 +19,7 @@ This manual is for Stand-alone GNU Info (version @value{VERSION},
 
 Copyright @copyright{} 1992, 1993, 1996, 1997, 1998, 1999, 2001,
 2002, 2003, 2004, 2005, 2006, 2007, 2008, 2009, 2010, 2011, 2012,
-2013, 2014, 2015 Free Software Foundation, Inc.
+2013, 2014, 2015, 2016 Free Software Foundation, Inc.
 
 @quotation
 Permission is granted to copy, distribute and/or modify this document
